--- a/dtcms4.0/DTcms_4.0_sql_src_Ultimate/DTcms.Web/web/html/css/list.css
+++ b/dtcms4.0/DTcms_4.0_sql_src_Ultimate/DTcms.Web/web/html/css/list.css
@@ -88,6 +88,18 @@
 .otherinfo ul li p a{ display:block; font-size:16px; margin-top:10px; line-height:30px;}
 .otherinfo ul li span{ display:block; color:#999;}
 
+
+.otherinfo .otitle dl{ zoom:1; height:24px; }
+.otherinfo .otitle dl:after{display:block;clear:both;content:"";visibility:hidden;height:0;}
+.otherinfo .otitle dl dt{ float:left; width:220px; color:#e14f00; font-size:24px; font-weight:bold; display:block; height:24px; line-height:24px;}
+.otitle dl dd{ float:right; width:980px;}
+.otherinfo .otitle dl dd ul{ float:right; width:980px;  margin-top:0; display:inline-block; text-align:right; } 
+.otherinfo .otitle dl dd ul li{ display:inline-block; width:auto; float:none; border:0; border-radius:0; margin:0; background:none; padding-bottom:0;}
+.otherinfo .otitle dl dd ul li a{ font-size:14px; height:18px; line-height:18px; border-right:1px solid #eee; padding-right:10px; margin-right:10px; overflow:hidden; display:inline-block; margin-top:3px;}
+.otherinfo .otitle dl dd ul li.more a{border:1px solid #eee; height:18px; border-radius:5px; padding:0 10px; }
+.otherinfo .otitle dl dd ul li.more a em{background:#fff url(../images/icon.gif) no-repeat right -578px;  padding-right:15px; font-size:14px; line-height:18px; font-style:normal;}
+
+
 /*pay*/
 .paybox{overflow: hidden;padding:20px ;background: #fff; border: 1px #e6e6e6 solid; margin-top:20px; border-radius:5px;}
 .tips{ background:url(../images/pay.png) no-repeat 0 -320px; padding-left:30px; height:24px; line-height:24px; color:#a93a13; border-bottom:1px solid #eee; padding-bottom:15px;}
