--- a/dtcms4.0/DTcms_4.0_sql_src_Ultimate/DTcms.Web/web/master.Master
+++ b/dtcms4.0/DTcms_4.0_sql_src_Ultimate/DTcms.Web/web/master.Master
@@ -6,9 +6,9 @@
 <head runat="server">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title></title>
-    <link href="css/swiper.min.css" rel="stylesheet" type="text/css" media="all">
-    <link href="css/index.css" rel="stylesheet" type="text/css" media="all">
-    <link href="css/common.css" rel="stylesheet" type="text/css" media="all">
+    <link href="css/common.css" rel="stylesheet" type="text/css">
+    <link href="css/list.css" rel="stylesheet" type="text/css">
+    <script src="/scripts/jquery/jquery-1.11.2.min.js"></script>
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
 </head>
