--- a/dtcms4.0/DTcms_4.0_sql_src_Ultimate/DTcms.Web/web/master.Master
+++ b/dtcms4.0/DTcms_4.0_sql_src_Ultimate/DTcms.Web/web/master.Master
@@ -6,9 +6,8 @@
 <head runat="server">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title></title>
-    <link href="css/common.css" rel="stylesheet" type="text/css">
-    <link href="css/list.css" rel="stylesheet" type="text/css">
-    <script src="/scripts/jquery/jquery-1.11.2.min.js"></script>
+    <link href="css/common.css" rel="stylesheet" />
+    <link href="css/list.css" rel="stylesheet" />
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
 </head>
@@ -60,6 +59,6 @@
         </dl>
     </div>
     <!--foot-->
-
+    <script src="/scripts/jquery/jquery-1.11.2.min.js"></script>
 </body>
 </html>
